# routes/index.js
@@ -2,10 +2,13 @@ const router = require("express").Router();
 
 // Home route
 router.get("/", (req, res) => {
-  res.status(200).send("Contacts API");
+  res.status(200).send("Library API");
 });
 
-// Contacts routes
-router.use("/contacts", require("./contacts"));
+// Books routes
+router.use("/books", require("./books"));
+
+// Teams routes
+router.use("/teams", require("./teams"));
 
 module.exports = router;
